--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <title>DubPerkov.github.io</title>
-    <link rel="stylesheet" src="main.css"/>
+    <link rel="stylesheet" href="main.css">
   </head>
   <body>
     <h2>Welcome To:</h2>
